piwigo/piwigo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: piwigo
  labels:
    app.kubernetes.io/name: piwigo
    app.kubernetes.io/component: photo-manager
    app.kubernetes.io/managed-by: kubectl
