piwigo/piwigo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: piwigo
  namespace: piwigo
  labels:
    app.kubernetes.io/name: piwigo
    app.kubernetes.io/component: photo-manager
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app.kubernetes.io/name: piwigo
    app.kubernetes.io/component: photo-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
