piwigo/piwigo-ingress.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: piwigo
  namespace: piwigo
  labels:
    app.kubernetes.io/name: piwigo
    app.kubernetes.io/component: ingress
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vigsel.albinmedoc.se`)
      kind: Rule
      services:
        - name: piwigo
          port: 80
